--- a/css/styles.css
+++ b/css/styles.css
@@ -561,6 +561,75 @@ margin-bottom: 20px;
 .join-link:focus {
    background-color: #2196F3;}
 
+   .subscribe{
+    width: 570px;
+    margin-left: 93px;
+       }
+
+   .subscribe-title{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    margin-bottom: 20px;
+     }
+
+     .subscribe-form{
+        display: flex;
+     }
+   
+   
+   .subscribe-input{
+    width: 358px;
+    height: 50px;
+    padding: 15px 16px;
+    margin-right: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    border-radius: 4px;
+    background-color: transparent;
+    font-family: inherit;
+    color: #FFFFFF;
+    font-size: 16px;
+    line-height: 1.25;
+   }
+
+   .subscribe-input::placeholder-shown {
+    color: rgba(255, 255, 255, 0.6);
+    font-size: 16px;
+    line-height: 1.25;
+  }
+
+   .subscribe-button{
+    width: 200px;
+    height: 50px;
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    background: var(--logo-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    padding: 10px 62px 10px 28px;
+    cursor: pointer;
+     }
+
+     
+  .subscribe-button-wrapper {
+    display: flex;
+    position: relative;
+    margin-left: 12px;
+         }
+  
+  .subscribe-button-wrapper.subscribe-icon {
+    position: absolute;
+    top: 13px;
+    right: 28px;
+  }
+
 /* --------Модальне вікно------- */
 
    .backdrop {
@@ -571,6 +640,8 @@ margin-bottom: 20px;
     top: 0;
     transition: opacity 300ms, visibility 300ms;
    }
+
+
    .backdrop.is-hidden .modal{
     transform:translate(-50%, -50%) scale(0) rotate(180deg);
    }
@@ -587,6 +658,7 @@ margin-bottom: 20px;
     left: 50%;
     transform: translate(-50%, -50%) scale(1) rotate(0);
     transition: transform 300ms;
+    padding: 40px;
    }
 
   .modal-close-btn{
@@ -605,7 +677,130 @@ margin-bottom: 20px;
     cursor: pointer;
     }
 
-      .is-hidden{
+    .modal-close-btn:hover,
+    .modal-close-btn:focus {
+    fill: var(--logo-color);
+    } 
+
+    .icon-close {
+        width: 30px;
+        height: 30px;
+        left: 1026px;
+        top: 229px;
+        background: #FFFFFF;
+        box-sizing: border-box;
+         }
+
+    .modal-title{
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 30px;
+    }
+
+    .modal-field{
+    margin-bottom: 28px;
+    }
+
+    .input-wrap{
+        position: relative;
+    }
+
+    .modal-icon{
+        position: absolute;
+        left: 14.27px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
+
+    .modal-input{
+    width: 100%;
+    height: 40px;
+    left: 576px;
+    top: 314px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    outline: none;
+    padding-left: 35px;
+    }
+
+    .modal-input:focus {
+    border-color: var(--logo-color);
+    }
+
+    .modal-input:focus + .modal-icon {
+        fill: var(--logo-color);
+    }
+
+    .modal-label{
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: #757575;
+    }
+
+    .modal-input:not(:placeholder-shown) {
+    fill: #2196F3;;
+    }
+    .modal-text{
+        width: 100%;
+        height: 120px;
+        border: 1px solid rgba(33, 33, 33, 0.2);
+        border-radius: 4px;
+        resize: none;
+    }
+
+    .check-text{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #757575;
+    display: flex;
+    }
+
+    .check-text span{
+        width: 16px;
+        height: 15px;
+        border: 2px solid #090b13;
+        border-radius: 3px;
+        margin-right: 5px;   
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .visually-hidden {
+        position: absolute;
+        white-space: nowrap;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
+        border-radius: 0;
+        padding: 0;
+        clip: rect(0 0 0 0);
+        clip-path: inset(50%);
+        margin: -1px;
+    }
+
+    .check-icon{
+        fill: transparent;
+    }
+    .modal-check:checked + .check-text span{
+        background-color: var(--logo-color);
+        border: none;
+         }
+
+         .modal-check:checked + .check-text .scheck-icon{
+        fill: #FFFFFF;
+         }
+
+
+         .is-hidden{
         visibility: hidden;
         opacity: 0;
         pointer-events: none;
@@ -615,14 +810,42 @@ margin-bottom: 20px;
         overflow: hidden;
       }
 
-  .icon-close {
-    width: 30px;
-    height: 30px;
-    left: 1026px;
-    top: 229px;
-    background: #FFFFFF;
-    box-sizing: border-box;
+      .contract{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--logo-color);
+    padding-left: 10px;
+    text-decoration: underline;
+      }
+
+      .button-send {
+    width: 200px;
+    height: 50px;
+    left: 700px;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    background: #188CE8;
+    border-radius: 4px;
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    cursor: pointer;
+    margin: auto;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
      }
+     .button-send:hover,
+     .button-send:focus{
+     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    }
+  
+
+
   
 .portfolio-page {
 display: none;
