--- a/css/styles.css
+++ b/css/styles.css
@@ -578,6 +578,7 @@ margin-bottom: 20px;
 
      .subscribe-form{
         display: flex;
+        align-items: center;
           
      }
    
@@ -612,11 +613,12 @@ margin-bottom: 20px;
     background: var(--logo-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    padding: 10px 62px 10px 28px;
+    padding: 10px 38px 10px 28px;
     cursor: pointer;
-    /* display: flex;
-    align-items: center; */
-    position: absolute;
+    display: flex;
+    align-items: center;
+    border: none;
+    
       
      }
 
